--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           - clients
         -->
 
-        <section class="clients">
+        /* <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -503,7 +503,6 @@
         </section>
 
       </article>
-
 
 
 
