commented out the client section

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           - clients
         -->
 
-        /* <section class="clients">
+        <!-- <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -501,6 +501,7 @@
           </ul>
 
         </section>
+        -->
 
       </article>
 
@@ -1169,9 +1170,13 @@
           <form action="#" class="form" data-form>
 
             <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+              <label>
+                <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+              </label>
 
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+              <label>
+                <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+              </label>
             </div>
 
             <label>
@@ -1206,8 +1211,8 @@
   <!--
     - ionicon link
   -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <!-- <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> -->
 
 </body>
 
