--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing, you might ask ?</h3>
+          <h3 class="h3 service-title">What am I doing, you might ask ?</h3>
 
           <ul class="service-list">
 
